<resources>
  <string name="app_name">Places Auto Complete EditText</string>
  <string name="type_in_your_location">Type in your Location</string>
  <string name="street">Street</string>
  <string name="city">City</string>
  <string name="state">State</string>
  <string name="country">Country</string>
  <string name="zip_code">Zip Code</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="place_id">Place ID</string>
  <string name="url">URL</string>
  <string name="utc_offset">UTC Offset</string>
  <string name="vicinity">Vicinity</string>
  <string name="compound_code">Compound Code</string>
  <string name="global_code">Global Code</string>
</resources>
